sending custom emails using nodemailer
